<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/account"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/image_picker"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#00000000"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:visibility="gone"
            app:cornerRadius="64dp"
            app:icon="@drawable/android_24px"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="64dp"
            app:iconTint="@color/main"
            app:layout_constraintBottom_toTopOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:strokeColor="@color/main"
            app:strokeWidth="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:visibility="gone"
            app:civ_border_color="@color/main"
            app:civ_border_width="5dp"
            app:layout_constraintBottom_toTopOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text|textPersonName"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHighlight="@color/main"
            android:textColorLink="@color/main"
            android:textCursorDrawable="@color/main"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_picker"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="text|textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHighlight="@color/main"
            android:textColorLink="@color/main"
            android:textCursorDrawable="@color/main"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHighlight="@color/main"
            android:textColorLink="@color/main"
            android:textCursorDrawable="@color/main"
            app:layout_constraintBottom_toTopOf="@id/repassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/repassword"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHighlight="@color/main"
            android:textColorLink="@color/main"
            android:textCursorDrawable="@color/main"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/textview_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/login1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repassword" />

        <TextView
            android:id="@+id/textview_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login2"
            app:layout_constraintBottom_toTopOf="@id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_1"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:text="@string/account"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:icon="@drawable/double_arrow_24px"
            app:iconGravity="end"
            app:iconPadding="0dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_2"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/main"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/create"
            android:textColor="@color/black"
            android:visibility="gone"
            app:cornerRadius="10dp"
            app:icon="@drawable/person_add_24px"
            app:iconGravity="textEnd"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_2"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
